# market-criticism-index

./: AGENTS.md  README.md  pyproject.toml  requirements.txt
data/interim/: gdelt_all_us_market_20220103_20220103.csv
data/raw/gdelt/: gdelt_all_us_market_20220103_20220103.json
data/raw/gdelt/doc_daily/all_us_market/2022/: 20220101.json  20220102.json  20220103.json  20220104.json  20220105.json  20220106.json  20220107.json  20220108.json  20220109.json  20220110.json  20220111.json  20220112.json  20220113.json  20220114.json  20220115.json  20220116.json  20220117.json  20220118.json  20220119.json
docs/: k_annotation_workflow.md
notebooks/: 00_data_collection_runbook.ipynb  01_market_data_collection_runbook.ipynb
scripts/: build_annotation_sample.py  build_mci_daily.py  build_panel_daily.py  collect_gdelt.py  collect_market_data.py  run_mvp_analysis.py  validate_annotations.py
src/mci/: __init__.py  annotations.py  config.py  data_collection.py  gdelt.py  index.py  market_data.py  modelling.py  plotting.py  text_processing.py
tests/: test_annotations.py  test_config.py  test_gdelt.py  test_imports.py  test_index.py  test_market_data.py  test_market_data_cli.py  test_market_panel.py  test_modelling.py  test_notebooks.py  test_text_processing.py
