[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "market-criticism-index"
version = "0.1.0"
description = "Research pipeline scaffold for market criticism narratives and US equity-market outcomes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
analysis = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

